Comunicação com a API

--- a/GEPED.Web/Web.config
+++ b/GEPED.Web/Web.config
@@ -19,6 +19,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="BraspagUrlAuthor" value="https://apisandbox.braspag.com.br/v2/sales/"/>
+    <add key="BraspagUrlCapture" value="https://apisandbox.braspag.com.br/v2/sales/{0}/capture?amount={1}"/>
+    <add key="BraspagUrlCancel" value="https://apisandbox.braspag.com.br/v2/sales/{0}/void?amount={1}"/>
+    <add key="BraspagUrlConsult" value="https://apiquerysandbox.braspag.com.br/v2/sales/{0}"/>
+    <add key="MerchantId" value="0a22ef1e-7fca-4e9a-b715-e080dc8a1d27"/>
+    <add key="MerchantKey" value="HCWVNWUTCFJVRLWLZJVHNSTERGJTDTCZZPOZMWSM"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -50,7 +56,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -71,7 +77,7 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
+      </dependentAssembly>      
     </assemblyBinding>
   </runtime>
   <entityFramework>
