--- a/GEPED.Business/GEPED.Business.csproj
+++ b/GEPED.Business/GEPED.Business.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{03CEA0EF-E671-4328-9ADC-06E4F0BD3B4A}</ProjectGuid>
+    <ProjectGuid>{08472D2D-3702-452B-A538-3E1D6049CA6F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GEPED.Model</RootNamespace>
-    <AssemblyName>GEPED.Model</AssemblyName>
+    <RootNamespace>GEPED.Business</RootNamespace>
+    <AssemblyName>GEPED.Business</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,17 +41,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CancelOrder.cs" />
-    <Compile Include="CaptureOrder.cs" />
-    <Compile Include="Link.cs" />
-    <Compile Include="Creditcard.cs" />
-    <Compile Include="CrudBase.cs" />
-    <Compile Include="Customer.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="OrderLocal.cs" />
-    <Compile Include="OrderStatus.cs" />
-    <Compile Include="Payment.cs" />
+    <Compile Include="IOrderBusiness.cs" />
+    <Compile Include="OrderBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GEPED.Model\GEPED.Model.csproj">
+      <Project>{03cea0ef-e671-4328-9adc-06e4f0bd3b4a}</Project>
+      <Name>GEPED.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GEPED.Repository\GEPED.Repository.csproj">
+      <Project>{3d126de4-91d1-4b63-9309-e606040fc123}</Project>
+      <Name>GEPED.Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GEPED.ServicePayment\GEPED.ServicePayment.csproj">
+      <Project>{0f6c0bbc-b662-436f-8149-b8c97b65f2b9}</Project>
+      <Name>GEPED.ServicePayment</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GEPED.Utils\GEPED.Utils.csproj">
+      <Project>{cbf6efac-58e1-4929-8c59-4792b9f899a8}</Project>
+      <Name>GEPED.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
