--- a/GEPED.Repository/GEPED.Repository.csproj
+++ b/GEPED.Repository/GEPED.Repository.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{03CEA0EF-E671-4328-9ADC-06E4F0BD3B4A}</ProjectGuid>
+    <ProjectGuid>{3D126DE4-91D1-4B63-9309-E606040FC123}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GEPED.Model</RootNamespace>
-    <AssemblyName>GEPED.Model</AssemblyName>
+    <RootNamespace>GEPED.Repository</RootNamespace>
+    <AssemblyName>GEPED.Repository</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,17 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CancelOrder.cs" />
-    <Compile Include="CaptureOrder.cs" />
-    <Compile Include="Link.cs" />
-    <Compile Include="Creditcard.cs" />
-    <Compile Include="CrudBase.cs" />
-    <Compile Include="Customer.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="OrderLocal.cs" />
-    <Compile Include="OrderStatus.cs" />
-    <Compile Include="Payment.cs" />
+    <Compile Include="OrderRepository.cs" />
+    <Compile Include="GenericRepository.cs" />
+    <Compile Include="Interfaces\IGenericRepository.cs" />
+    <Compile Include="Interfaces\IOrderRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GEPED.Model\GEPED.Model.csproj">
+      <Project>{03cea0ef-e671-4328-9adc-06e4f0bd3b4a}</Project>
+      <Name>GEPED.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
